--- a/xGame/client/src/Components/Match/MatchStyle.css
+++ b/xGame/client/src/Components/Match/MatchStyle.css
@@ -12,7 +12,7 @@
     flex-direction: column;
     width: 25%;
     height: 100%;
-    background-color:lightgrey;
+    background-color:navajowhite;
     min-height: 85vh;
 }
 
@@ -21,7 +21,7 @@
     justify-content: center;
     width: 50%;
     height: 100%;
-    background-color: grey;
+    background-color: antiquewhite;
     min-height: 85vh;
     margin: auto
 }
