player stats displayed

--- a/xGame/client/src/Components/Match/MatchStyle.css
+++ b/xGame/client/src/Components/Match/MatchStyle.css
@@ -46,6 +46,10 @@
     background-color: sandybrown;
 }
 
+.hiddenBoardSquare{
+    flex:1;
+    background-color: navajowhite;
+}
 .transparent{
     opacity: 0%;
 }
